--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ author_profile: true
 
 {% include base_path %}
 
-Understanding New Zealand through data - this is a personal blog for <a href="/about">Harkanwal Singh</a>, data editor at the New Zealand Herald, to share analysis and code behind the visualisations on <a href="http://insights.nzherald.co.nz">Herald Insights</a>.
+Understanding New Zealand through data - this is a personal blog for <a href="/about">Harkanwal Singh</a>, data editor at the New Zealand Herald, to share analysis and code behind the visualisations on [Herald Insights](http://insights.nzherald.co.nz).
 
 <h3 class="archive__subtitle">{{ site.data.ui-text[site.locale].recent_posts | default: "Recent Posts" }}</h3>
 
